need to fix vert long tablet overflow

--- a/styles.css
+++ b/styles.css
@@ -368,7 +368,7 @@ path.blue{
 .collections-section-vFor{
     display: flex;
     flex-direction: column;
-    margin: 10px 10px 10px  10px;
+    margin: 10px 10px 10px 10px;
 }
 
 /*================ ITEM ==============================*/
@@ -383,12 +383,13 @@ path.blue{
 
     .item-infoAndOrder-box{
         width: 40%;
-        padding:5px;
+        padding:10px;
     }
     .item-all-images-container{
         width: 60%;
     }
     .item-box-for-big-image{
+        display: flex;
         width: 80%;
     }
     .item-all-SmallImages-box{
@@ -397,9 +398,10 @@ path.blue{
             flex-direction: column;
             justify-content:center;
     }
-    .item-slide-indicator{
-        display:none;
+    .item-mobile-swiper{
+        display: none;
     }
+
 }
 /*для планш гориз*/
 @media screen and (min-width:768px) and (max-width: 1200px)  {
@@ -410,12 +412,13 @@ path.blue{
 
     .item-infoAndOrder-box{
         width: 40%;
-        padding:5px;
+        padding:10px;
     }
     .item-all-images-container{
         width: 60%;
     }
     .item-box-for-big-image{
+        display: flex;
         width: 80%;
     }
     .item-all-SmallImages-box{
@@ -424,9 +427,10 @@ path.blue{
             flex-direction: column;
             justify-content:center;
     }
-    .item-slide-indicator{
-        display:none;
+    .item-mobile-swiper{
+        display: none;
     }
+
 }
 
 /*для планш верт*/
@@ -437,8 +441,8 @@ path.blue{
     }
 
     .item-infoAndOrder-box{
-                width: 40%;
-        padding:5px;
+        width: 40%;
+        padding:10px;
     }
     .item-all-images-container{
         display: flex;
@@ -447,6 +451,7 @@ path.blue{
 
     }
     .item-box-for-big-image{
+        display: flex;
         width:100%
     }
 
@@ -457,18 +462,15 @@ path.blue{
         justify-content:center;
     }
 
-    .item-box-for-small-image{
-        /*aspect-ratio: 1/1;*/
-        /*width:260px;*/
+    .item-mobile-swiper{
+        display: none;
     }
 
-    .item-slide-indicator{
-        display:none;
-    }
 
 }
 
 /*длинный вариант - в столбик, но есть превьюшки*/
+/*---проработать длинное изображение - обрезается*/
 @media screen and (min-width:481px) and (max-width: 640px) {
     .item-whole-container{
         display:flex;
@@ -476,7 +478,7 @@ path.blue{
     }
     .item-infoAndOrder-box{
         width: 100%;
-        padding:5px;
+        padding:10px;
     }
     .item-all-images-container{
         display: flex;
@@ -485,6 +487,7 @@ path.blue{
 
     }
     .item-box-for-big-image{
+        display: flex;
         width:100%
     }
 
@@ -495,13 +498,8 @@ path.blue{
         justify-content:center;
     }
 
-    .item-box-for-small-image{
-        /*aspect-ratio: 1/1;*/
-        /*width:260px;*/
-    }
-
-    .item-slide-indicator{
-        display:none;
+    .item-mobile-swiper{
+        display: none;
     }
 
 }
@@ -513,42 +511,36 @@ path.blue{
         flex-direction:row;
     }
     .item-infoAndOrder-box{
-        padding:5px;
+        padding:10px;
     }
     .item-all-images-container{
         flex-direction: column-reverse;
-    }
-    .item-box-for-big-image{
         width:100%;
     }
+    .item-box-for-big-image{
+            display:none;
+        /*width:100%;*/
+    }
     .item-all-SmallImages-box{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        display: none;
     }
     .item-images-smallImage{
         display:none;
     }
-    .item-slide-indicator{
-        width:15px;
-        height:15px;
-        border-radius:10px;
-        border:1px solid orangered;
-            background-color: grey;
-        /*не попробовать ли подобрать цвет под кругляшки из getMainColor(item)*/
-        margin:5px;
+    .item-mobile-swiper{
 
     }
+
 }
 
 
 .item-whole-container{
-    border: 2px solid darkolivegreen;
+    /*border: 2px solid darkolivegreen;*/
     flex-wrap:wrap;
 }
 
     .item-infoAndOrder-box{
-        border: 2px dotted violet;
+        /*border: 2px dotted violet;*/
     }
         .item-selectors-plus-buttons{
             display:flex;
@@ -580,21 +572,18 @@ path.blue{
     .item-all-images-container{
         font-size:0;
         display:flex;
-        /*flex-wrap:wrap;*/
-        border:2px dotted dodgerblue;
+        /*border:2px dotted dodgerblue;*/
     }
         .item-box-for-big-image{
-                /*width: 500px;*/
             overflow: hidden;
-            border: 2px solid red;
+            /*border: 2px solid red;*/
             aspect-ratio: 1/1;
-            display: flex;
             justify-content: center;
             align-items: center;
 
         }
             .item-images-bigImage{
-                border:2px solid darkgoldenrod;
+                /*border:2px solid darkgoldenrod;*/
                 max-width: 100%;
                 max-height: 100%;
                 height: auto;
@@ -602,24 +591,18 @@ path.blue{
 
         .item-all-SmallImages-box{
             /*display: flex;в медиа*/
-            border:2px solid lime;
+            /*border:2px solid lime;*/
         }
 
             .item-box-for-small-image{
-                border: 2px solid purple;
+                /*border: 2px solid purple;*/
                 text-align: center;
                 margin:5px;
             }
                 .item-images-smallImage{
-                    border: 2px solid orangered;
+                    /*border: 2px solid orangered;*/
                     max-width:100%
                 }
-
-
-
-
-
-
 
 /*-----------подвал-----------------------------------*/
 footer{
@@ -724,21 +707,6 @@ footer{
 }
 
 /*-----свайпер------------------------------*/
-/*html,*/
-/*body {*/
-/*    position: relative;*/
-/*    height: 100%;*/
-/*}*/
-
-/*body {*/
-/*    background: #eee;*/
-/*    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;*/
-/*    font-size: 14px;*/
-/*    color: #000;*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*}*/
-
 .swiper {
     width: 100%;
     height: 100%;
@@ -767,7 +735,7 @@ footer{
 
 .swiper-slide img {
     display: block;
-            /*width: 100%;*/
+    width: 100%;
             /*height: 100%;*/
     object-fit: cover;
 }
